bin/tests/snapshots/useless_parens__dbf237a5ac629f60efb6cc28b28986f3_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
[(builtins.map)]
---
<temp_file_path>>1:2:W:8:Useless parentheses around primitive expression
