bin/tests/snapshots/useless_parens__dbf237a5ac629f60efb6cc28b28986f3_lint_json.snap
---
source: bin/tests/useless_parens.rs
---
[(builtins.map)]
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_parens",
      "note": "These parentheses can be omitted",
      "code": 8,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 2
            },
            "to": {
              "line": 1,
              "column": 16
            }
          },
          "message": "Useless parentheses around primitive expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 2
              },
              "to": {
                "line": 1,
                "column": 16
              }
            },
            "fix": "builtins.map"
          },
          "fixable": true
        }
      ]
    }
  ]
}
