bin/tests/snapshots/useless_parens__e77035eacc5250b3a65353c52612eb4a_fix.snap
---
source: bin/tests/useless_parens.rs
---
({ f = 2; })
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-({ f = 2; })
+{ f = 2; }
