bin/tests/snapshots/useless_parens__e77035eacc5250b3a65353c52612eb4a_lint.snap
---
source: bin/tests/useless_parens.rs
---
({ f = 2; })
---
[useless_parens] Warning: These parentheses can be omitted
   ╭─[ <temp_file_path>:1:1 ]
   │
 1 │ ({ f = 2; })
   │ ──────┬─────  
   │       ╰─────── Useless parentheses around primitive expression
───╯
