bin/tests/snapshots/useless_parens__e77035eacc5250b3a65353c52612eb4a_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
({ f = 2; })
---
<temp_file_path>>1:1:W:8:Useless parentheses around primitive expression
