bin/tests/snapshots/useless_parens__e77035eacc5250b3a65353c52612eb4a_lint_json.snap
---
source: bin/tests/useless_parens.rs
---
({ f = 2; })
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_parens",
      "note": "These parentheses can be omitted",
      "code": 8,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 1
            },
            "to": {
              "line": 1,
              "column": 13
            }
          },
          "message": "Useless parentheses around primitive expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 1
              },
              "to": {
                "line": 1,
                "column": 13
              }
            },
            "fix": "{ f = 2; }"
          },
          "fixable": true
        }
      ]
    }
  ]
}
