bin/tests/snapshots/useless_parens__ed0b445d7f4db791ac8dcf41de7d3bc416d22cc4154b5a58ff82ce1fed6fd3c0_lint.snap
---
source: bin/tests/useless_parens.rs
---
let a = 0; in (null)
---
[W08] Warning: These parentheses can be omitted
   ╭─[<temp_file_path>:1:15]
   │
 1 │ let a = 0; in (null)
   ·               ───┬──  
   ·                  ╰──── Useless parentheses around body of let expression
───╯
