bin/tests/snapshots/useless_parens__ed0b445d7f4db791ac8dcf41de7d3bc4_lint_errfmt.snap
---
source: bin/tests/useless_parens.rs
---
let a = 0; in (null)
---
<temp_file_path>>1:15:W:8:Useless parentheses around body of `let` expression
