bin/tests/snapshots/useless_parens__ed0b445d7f4db791ac8dcf41de7d3bc4_lint_json.snap
---
source: bin/tests/useless_parens.rs
---
let a = 0; in (null)
---
{
  "file": "<temp_file_path>",
  "report": [
    {
      "name": "useless_parens",
      "note": "These parentheses can be omitted",
      "code": 8,
      "severity": "Warn",
      "diagnostics": [
        {
          "at": {
            "from": {
              "line": 1,
              "column": 15
            },
            "to": {
              "line": 1,
              "column": 21
            }
          },
          "message": "Useless parentheses around body of `let` expression",
          "suggestion": {
            "at": {
              "from": {
                "line": 1,
                "column": 15
              },
              "to": {
                "line": 1,
                "column": 21
              }
            },
            "fix": "null"
          },
          "fixable": true
        }
      ]
    }
  ]
}
